# Agentic-Early-Warning-Intelligence-System-for-Silent-System-Failures

./: .env.example  .gitignore  API_README.md  COLAB_UPLOAD_GUIDE.md  Dockerfile  PHASE2_DATA_GUIDE.md  PHASE2_SUMMARY.md  PHASE3_DELIVERY_SUMMARY.md  PHASE3_FEATURE_ENGINEERING_GUIDE.md  PHASE3_IMPLEMENTATION_CHECKLIST.md  PHASE3_QUICK_REFERENCE.md  PHASE3_SUMMARY.md  PHASE5_README.md  PROJECT_STATUS.md  README.md  RESEARCH_FRAMEWORK.md  cell16_content.py  cell6_verify.py  cell_content.py  cloudrun.yaml  deploy.sh  docker-compose.yml  ecs-task-definition.json  extract_code.py  fix_nb08_v2.py  fix_rag_calibration.py  fix_split.py  fix_split_anomaly.py  insert_baseline.py  mlflow.db  modify_notebook.py  nginx.conf  prepare_for_colab.sh  project_config.json  prometheus.yml  pyproject.toml  requirements.txt  run_baseline.py  run_nb.py  train_all_data.py  (+4 more)
dashboard/: manage.py
docs/: FINAL_REPORT.md  PHASE10_SUMMARY.md  PHASE11_SUMMARY.md  PHASE12_SUMMARY.md  PHASE4_ML_TRAINING_GUIDE.md  PHASE4_QUICK_REFERENCE.md  PHASE4_SUMMARY.md  PHASE5_ANOMALY_DETECTION_GUIDE.md  PHASE5_QUICK_REFERENCE.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  PHASE8_SUMMARY.md  RESEARCH_PAPER.md
logs/: mlops_performance_logs.json
models/: baseline_features.json  features.json  healthy_baseline.json  if_anomaly_detector.joblib  metrics.json  rf_failure_baseline.joblib  rf_threshold.json  scaler.joblib  scalers_per_subset.joblib  xgb_config.json  xgb_model.joblib  xgb_rul_baseline.joblib  xgboost_best.joblib
notebooks/: 01_eda_cmapss_loghub.ipynb  02_feature_engineering_baseline.ipynb  02_feature_engineering_pipeline.ipynb  03_ml_model_training.ipynb  04_anomaly_detection.ipynb  mlflow.db  (+5 more)
(+79 files in other folders)
