[tool.poetry]
name = "agentic-ewis"
version = "0.1.0"
description = "Agentic Early-Warning Intelligence System for Silent System Failures"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

# Data processing & ML
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
torch = "^2.1.0"

# Time-series & signal processing
statsmodels = "^0.14.0"
ruptures = "^1.1.8"
scipy = "^1.11.0"

# Vector DB & Retrieval
faiss-cpu = "^1.7.4"
pgvector = "^0.2.0"

# LLM & Agentic AI
langchain = "^0.1.0"
langgraph = "^0.0.20"
openai = "^1.3.0"
anthropic = "^0.7.0"

# MLOps & Monitoring
mlflow = "^2.10.0"
evidently = "^0.4.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"

# API & Deployment
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic-settings = "^2.1.0"

# Utilities
loguru = "^0.7.0"
click = "^8.1.0"
tqdm = "^4.66.0"
requests = "^2.31.0"

# Development
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
